update landing page

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -98,6 +98,10 @@
       "premium": "Premium",
       "bedrooms": "Bedrooms",
       "patio": "Patio",
+      "terraza": "Terrace",
+      "studio": "Studio",
+      "reserveButton": "Reserve with $1,000 USD",
+      "floor": "Floor",
       "available": "Available",
       "penthouse": "Penthouse",
       "limitedUnits": "Limited Units",
