--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -98,6 +98,10 @@
       "premium": "Premium",
       "bedrooms": "Habitaciones",
       "patio": "Patio",
+      "terraza": "Terraza",
+      "studio": "Estudio",
+      "reserveButton": "Reservar con $1,000 USD",
+      "floor": "Piso",
       "available": "Disponible",
       "penthouse": "Penthouse",
       "limitedUnits": "Pocas Unidades",
