debuggin contact fail in production

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -71,7 +71,9 @@
       "submit": "SEND MESSAGE",
       "sending": "Sending...",
       "success": "Message sent successfully",
+      "successDescription": "We will contact you soon",
       "error": "There was an error sending your message",
+      "retryMessage": "Try again in a few moments",
       "nameTooShort": "Name must be at least 2 characters",
       "emailInvalid": "Invalid email",
       "dateRequired": "Date is required",
