--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -71,7 +71,9 @@
       "submit": "ENVIAR MENSAJE",
       "sending": "Enviando...",
       "success": "Mensaje enviado exitosamente",
+      "successDescription": "Te contactaremos pronto",
       "error": "Hubo un error al enviar tu mensaje",
+      "retryMessage": "Intenta nuevamente en unos momentos",
       "nameTooShort": "El nombre debe tener al menos 2 caracteres",
       "emailInvalid": "Email inválido",
       "dateRequired": "Fecha requerida",
